Add API Basics (#13)
Just getters for organizations and oauth2 providers, which will let us
actually create organizations in a minute!
